# krita

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.script  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  diff.patch
.gitlab/merge_request_templates/: merge_request_template.md
benchmarks/: CMakeLists.txt
benchmarks/KisMultiThreadedScanlineFillBenchmarks/: commonFunctions.h  fillColor.cpp  fillColor.h  fillColorExternal.cpp  fillColorExternal.h  fillSelection.cpp  fillSelection.h  fillSelectionWithBoundary.cpp  fillSelectionWithBoundary.h
build-tools/ci-scripts/: android.yml  build-plugins.py  cppcheck.yml  linux.yml  windows.yml
build-tools/windows/: build.cmd
krita/: krita.action  krita.qrc  krita5.xmlgui  krita5.xmlgui.cmake  krita5ToolOptionsToolbar.xmlgui  kritamenu.action  main.cc  org.kde.krita.appdata.xml
libs/brush/: kis_brush.h  kis_png_brush.cpp  kis_svg_brush.cpp
libs/flake/: CMakeLists.txt  KoCanvasResourceProvider.cpp  KoClipMaskPainter.cpp  KoHatchBackground.cpp  KoMeshPatchesRenderer.h  KoShapeController.cpp  KoShapeShadow.cpp  KoSnapGuide.cpp  KoSnapGuide.h  KoSnapStrategy.cpp  KoSnapStrategy.h  KoToolBase.cpp  KoToolBase.h  KoToolBase_p.h  KoToolManager.cpp  KoToolManager.h
libs/global/: KisHandlePainterHelper.cpp  kis_algebra_2d.cpp  kis_config_notifier.cpp  kis_config_notifier.h  kis_global.h  kis_shared_ptr.h
libs/image/: CMakeLists.txt  KisAutoLevels.cpp  kis_base_mask_generator.h  (+50 more)
packaging/: config.ini  config.ini.cmake  download_release_artifacts.sh  download_release_artifacts.sh.cmake
plugins/dockers/shapetreedocker/: CMakeLists.txt  KisShapeTreeModel.cpp  KisShapeTreeModel.h  ShapeTreeDockerDock.cpp  ShapeTreeDockerDock.h  ShapeTreeDockerPlugin.cpp  ShapeTreeDockerPlugin.h  krita_shapetreedocker.json
plugins/dockers/vectornodesdocker/: CMakeLists.txt  krita_vectornodesdocker.json  nodeitem.cpp  nodeitem.h  nodescene.cpp  nodescene.h  nodestyles.cpp  nodestyles.h  vectornodes_docker_widget.cpp  vectornodes_docker_widget.h  vectornodes_docker_widget.ui  vectornodesdocker.cpp  vectornodesdocker.h  vectornodesdocker_dock.cpp  vectornodesdocker_dock.h
plugins/dockers/vectornodesdocker/elements/: connection.cpp  connection.h  editormenu.cpp  editormenu.h  editormenuitem.cpp  editormenuitem.h  ioelement.cpp  ioelement.h  nodeoutlinerectitem.cpp  nodeoutlinerectitem.h
plugins/dockers/vectornodesdocker/nodes/: colornode.cpp  colornode.h  editornode.cpp  editornode.h  getshapesnode.cpp  getshapesnode.h  layernode.cpp  layernode.h  mathnode.cpp  mathnode.h  noisenode.cpp  noisenode.h  outputnode.cpp  outputnode.h  previewnode.cpp  previewnode.h  shapenode.cpp  shapenode.h  valuenode.cpp  valuenode.h
plugins/impex/qoi/: CMakeLists.txt  kis_qoi_converter.cpp  kis_qoi_converter.h  kis_qoi_export.cc  kis_qoi_export.h  kis_qoi_import.cc  kis_qoi_import.h  kis_wdg_options_qoi.ui  krita_qoi.desktop  krita_qoi_export.json  krita_qoi_import.json
plugins/impex/qoi/tests/: CMakeLists.txt  KisQoiTest.cpp  KisQoiTest.h
sdk/: clang-tidy-arguments-wrapper.sh
(+714 files in other folders)
